--- a/style.css
+++ b/style.css
@@ -177,7 +177,7 @@ input, textarea, button, select, label { font-family: inherit; }
 .themeform select { appearance: normal; -moz-appearance: menulist; -webkit-appearance: menulist; }
 .themeform input[type="checkbox"] { -moz-appearance: checkbox; -webkit-appearance: checkbox; }
 .themeform input[type="radio"] { -moz-appearance: radio; -webkit-appearance: radio; }
-.themeform label { font-weight: 600; color: #333; }
+.themeform label { font-weight: 600; color: #fff; }
 .themeform input[type="search"],
 .themeform input[type="text"], 
 .themeform input[type="password"], 
@@ -195,8 +195,8 @@ input, textarea, button, select, label { font-family: inherit; }
 .themeform input[type="tel"]:focus,
 .themeform input[type="number"]:focus, 
 .themeform select:focus,
-.themeform textarea:focus { border-color: #444; color: #ccc; -webkit-box-shadow: 0 0 3px rgba(0,0,0,0.1); box-shadow: 0 0 3px rgba(0,0,0,0.1); }
-.themeform label .required { color: #333; }
+.themeform textarea:focus { border-color: #555; color: #ccc; -webkit-box-shadow: 0 0 3px rgba(0,0,0,0.1); box-shadow: 0 0 3px rgba(0,0,0,0.1); }
+.themeform label .required { color: #999; }
 .themeform input[type="button"],
 .themeform input[type="reset"],
 .themeform input[type="submit"],
@@ -226,7 +226,7 @@ input, textarea, button, select, label { font-family: inherit; }
 .entry dt { font-weight: 600;}
 .entry address { margin-bottom: 1em; }
 .entry blockquote { position: relative; color: #777; font-style: italic; margin: 0 0 20px 0; padding-left: 50px; }
-.entry blockquote p { font-weight: 400; color: #444; margin-bottom: 0.75em; }
+.entry blockquote p { font-weight: 400; color: #fff; margin-bottom: 0.75em; }
 .entry blockquote:before { content: "\f10d"; color: #ccc; font-size: 32px; font-style: normal; font-family: "Font Awesome 5 Free"; font-weight: 900; text-align: center; position: absolute; left: 0; top: 0; }
 .entry blockquote.twitter-tweet:before { content: "\f099"; }
 .entry code, .entry pre { font-family: Monaco, "Courier New", "DejaVu Sans Mono", "Bitstream Vera Sans Mono", monospace; font-size: 11px; }
@@ -297,6 +297,7 @@ transition: all .2s ease;
 .heading,
 #reply-title { font-weight: normal; font-size: 18px; font-weight: 600; margin-bottom: 1em; }
 .heading i { font-size: 22px; margin-right: 6px; }
+.single h4.heading { padding-bottom: 30px; margin-bottom: 40px; border-bottom: 1px solid #333; }
 
 
 /* ------------------------------------------------------------------------- *
@@ -705,7 +706,7 @@ box-shadow: 0 0 2px rgba(255,255,255,0.4);
 .post-comments:hover { color: #fff; opacity: 0.75; }
 
 .content-inner { box-sizing: border-box; padding: 40px; }
-.content-inner > article { background: #fff; border-radius: 10px; margin-bottom: 20px; max-width: 920px; margin-left: auto; margin-right: auto; }
+.content-inner > article { border-radius: 10px; margin-bottom: 20px; max-width: 920px; margin-left: auto; margin-right: auto; }
 
 #wrapper { background: #222; }
 .content { background: #222; border-top: 1px solid #333; }
@@ -866,7 +867,7 @@ box-shadow: 0 0 2px rgba(255,255,255,0.4);
 .nav-menu:not(.mobile) ul ul li.current_page_item > span > a, 
 .nav-menu:not(.mobile) ul ul li.current-menu-item > span > a, 
 .nav-menu:not(.mobile) ul ul li.current-menu-ancestor > span > a, 
-.nav-menu:not(.mobile) ul ul li.current-post-parent > span > a { color: #aaa; }
+.nav-menu:not(.mobile) ul ul li.current-post-parent > span > a { color: #000; }
 
 .nav-menu.mobile { background: #fff; border-bottom: 1px solid #eee; }
 .nav-menu.mobile button.active .svg-icon { fill: #333; }
