--- a/style.css
+++ b/style.css
@@ -684,15 +684,7 @@ box-shadow: 0 0 2px rgba(255,255,255,0.4);
 .site-header { background: #eee; }
 .site-image { display: block; margin: 0 auto; max-height: 400px; }
 
-@media only screen and (max-width: 960px) {
-	.site-description { color: rgba(255,255,255,0.6); }
-	.site-description,
-	.s2 .social-links { background: linear-gradient(90deg, #bd1d9d 0%, #d64141 100%); box-shadow: inset 0 1px 0 rgba(255,255,255,0.15); }
-	.s2 .social-links .social-tooltip,
-	.s2 .social-links .social-tooltip:hover { color: #fff; }
-}
-
-#profile { position: relative; text-align: center; }
+#profile { position: relative; text-align: center; margin-bottom: 40px; }
 #profile-inner { position: relative; padding: 0 40px; }
 #profile-image { width: 200px; height: 200px; display: block; margin: 0 auto 40px; border: 1px solid #333; border-radius: 100%; padding: 10px; }
 #profile-image img { display: block; border-radius: 100%; }
@@ -712,7 +704,7 @@ box-shadow: 0 0 2px rgba(255,255,255,0.4);
 .content { background: #222; border-top: 1px solid #333; }
 
 .type-portfolio { background: #333; box-shadow: 0 10px 10px rgba(0,0,0,0.03), 0 1px 0 rgba(0,0,0,0.05); width: 320px; justify-content: center; align-items: center; overflow: hidden; }
-.type-portfolio img { display: block; }
+.type-portfolio img { display: block; width: 100%; height: auto; }
 .type-portfolio-date { background: rgba(0,0,0,0.2); padding: 4px 0; width: 50px; transition: all 0.3s ease; color: #fff; text-transform: uppercase; text-align: center; position: absolute; right: 0; top: -100px; margin: 10px; }
 .type-portfolio-date-month { font-weight: 600; }
 .type-portfolio-date-day { font-weight: 600; letter-spacing: -1px; font-size: 32px; margin: 2px; }
@@ -752,7 +744,7 @@ box-shadow: 0 0 2px rgba(255,255,255,0.4);
 
 /* menu hamburger */
 .menu-toggle-icon { float: right; width: 30px; height: 20px; position: relative; transform: rotate(0deg); transition: .5s ease-in-out; cursor: pointer; }
-.menu-toggle-icon span { display: block; position: absolute; height: 2px; width: 100%; background: #333; border-radius: 2px; opacity: 1; left: 0; transform: rotate(0deg); transition: .25s ease-in-out; }
+.menu-toggle-icon span { display: block; position: absolute; height: 2px; width: 100%; background: #fff; border-radius: 2px; opacity: 1; left: 0; transform: rotate(0deg); transition: .25s ease-in-out; }
 .menu-toggle-icon span:nth-child(1) { top: 0px; transform-origin: left center; }
 .menu-toggle-icon span:nth-child(2) { top: 8px; transform-origin: left center; }
 .menu-toggle-icon span:nth-child(3) { top: 16px; transform-origin: left center; }
@@ -829,7 +821,7 @@ box-shadow: 0 0 2px rgba(255,255,255,0.4);
 .nav-menu.mobile ul { border: 0; }
 .nav-menu.mobile ul li .menu-item-wrapper { justify-content: space-between; width: 100%; }
 .nav-menu.mobile > div > ul > li:last-child { margin-bottom: 52px; }
-.nav-menu.mobile ul li a { font-size: 14px; font-weight: 600; padding: 14px 20px; }
+.nav-menu.mobile ul li a { font-size: 15px; font-weight: 600; padding: 14px 20px; }
 .nav-menu.mobile ul ul li a { font-size: 14px; }
 .nav-menu.mobile ul ul li a { padding: 12px 0 12px 40px; }
 .nav-menu.mobile ul ul ul li a { padding: 12px 0 12px 60px; }
@@ -837,7 +829,7 @@ box-shadow: 0 0 2px rgba(255,255,255,0.4);
 
 /* menu styling */
 .nav-menu a { color: #fff; }
-.nav-menu .svg-icon { fill: #333; }
+.nav-menu .svg-icon { fill: #fff; }
 .nav-menu:not(.mobile) {  }
 .nav-menu:not(.mobile) .menu ul { background: #eee; color: #fff; border-radius: 4px; }
 .nav-menu:not(.mobile) .menu ul:after { border-bottom-color: #eee; }
@@ -869,15 +861,16 @@ box-shadow: 0 0 2px rgba(255,255,255,0.4);
 .nav-menu:not(.mobile) ul ul li.current-menu-ancestor > span > a, 
 .nav-menu:not(.mobile) ul ul li.current-post-parent > span > a { color: #000; }
 
-.nav-menu.mobile { background: #fff; border-bottom: 1px solid #eee; }
-.nav-menu.mobile button.active .svg-icon { fill: #333; }
-.nav-menu.mobile ul ul { background: rgba(0,0,0,0.03); }
+.nav-menu.mobile { background: #222; border-top: 1px solid #333; }
+.nav-menu.mobile button.active .svg-icon { fill: #fff; }
+.nav-menu.mobile ul ul { background: rgba(0,0,0,0.14); }
 .nav-menu.mobile ul li .menu-item-wrapper,
-.nav-menu.mobile ul ul li .menu-item-wrapper { border-bottom: 1px solid rgba(0,0,0,0.07); }
-.nav-menu.mobile ul li a { color: #333; }
+.nav-menu.mobile ul ul li .menu-item-wrapper { border-bottom: 1px solid rgba(255,255,255,0.06); }
+.nav-menu.mobile ul li a { color: #ccc; }
+.nav-menu.mobile ul li a:hover { color: #fff; }
 .nav-menu.mobile ul button,
-.nav-menu.mobile ul ul button { border-left: 1px solid rgba(0,0,0,0.07); }
-.nav-menu.mobile > div > ul { border-top: 1px solid rgba(0,0,0,0.07); }
+.nav-menu.mobile ul ul button { border-left: 1px solid rgba(255,255,255,0.06); }
+.nav-menu.mobile > div > ul { border-top: 1px solid rgba(255,255,255,0.06); }
 
 
 /* ------------------------------------------------------------------------- *
@@ -1166,7 +1159,7 @@ box-shadow: 0 0 2px rgba(255,255,255,0.4);
 .post-nav li a span,
 .post-nav li a i { transition-property: background color; transition-duration: 0.2s; transition-timing-function: ease-out; }
 
-.sidebar .post-nav { background: transparent; margin: 30px 0; }
+.sidebar .post-nav { background: transparent; margin-bottom: 30px; }
 .sidebar .post-nav li { width: 100%; }
 .sidebar .post-nav li:first-child a { border-top: 1px solid #333; }
 .sidebar .post-nav li a { padding-top: 20px; padding-bottom: 20px; border-bottom: 1px solid #333; }
