--- a/style.css
+++ b/style.css
@@ -68,8 +68,8 @@ table { border-collapse: collapse; border-spacing: 0; }
  *  Base Styles
 /* ------------------------------------------------------------------------- */
 body { background: #f5f5f5; font-size: 15px; line-height: 1.5em; color: #ccc; font-weight: 300; }
-::selection { background: #333; color: #fff; }
-::-moz-selection { background: #333; color: #fff; }
+::selection { background: #fff; color: #333; }
+::-moz-selection { background: #fff; color: #333; }
 a { color: #fff; text-decoration: none; }
 a:hover { color: #ccc; }
 img { max-width: 100%; height: auto; }
@@ -230,7 +230,7 @@ input, textarea, button, select, label { font-family: inherit; }
 .entry blockquote:before { content: "\f10d"; color: #ccc; font-size: 32px; font-style: normal; font-family: "Font Awesome 5 Free"; font-weight: 900; text-align: center; position: absolute; left: 0; top: 0; }
 .entry blockquote.twitter-tweet:before { content: "\f099"; }
 .entry code, .entry pre { font-family: Monaco, "Courier New", "DejaVu Sans Mono", "Bitstream Vera Sans Mono", monospace; font-size: 11px; }
-.entry pre { background: url(img/pre.png) repeat top; padding: 18px 20px; margin: 30px 0; border: 1px solid #ddd; line-height: 19px; white-space: pre-wrap; word-wrap: break-word; overflow-x: auto; overflow-y: hidden; }
+.entry pre { background: url(img/pre.png) repeat top; padding: 18px 20px; margin: 30px 0; border: 1px solid #444; line-height: 19px; white-space: pre-wrap; word-wrap: break-word; overflow-x: auto; overflow-y: hidden; }
 .entry code { background: #ddd; padding: 0 3px; }
 .entry ins { background: #fff486; }
 .entry sub,
@@ -821,7 +821,7 @@ box-shadow: 0 0 2px rgba(255,255,255,0.4);
 .nav-menu.mobile ul { border: 0; }
 .nav-menu.mobile ul li .menu-item-wrapper { justify-content: space-between; width: 100%; }
 .nav-menu.mobile > div > ul > li:last-child { margin-bottom: 52px; }
-.nav-menu.mobile ul li a { font-size: 15px; font-weight: 600; padding: 14px 20px; }
+.nav-menu.mobile ul li a { font-size: 17px; font-weight: 400; padding: 14px 20px; }
 .nav-menu.mobile ul ul li a { font-size: 14px; }
 .nav-menu.mobile ul ul li a { padding: 12px 0 12px 40px; }
 .nav-menu.mobile ul ul ul li a { padding: 12px 0 12px 60px; }
@@ -924,10 +924,10 @@ box-shadow: 0 0 2px rgba(255,255,255,0.4);
 .featured-item-avatar img { border-radius: 100%; } 
 .featured-item-title { font-size: 52px; letter-spacing: -1px; font-weight: 300; line-height: 1.2em; margin-bottom: 20px; }
 .featured-item-title a { color: #fff; }
-.featured-item-category { font-size: 18px; color: #666; text-transform: uppercase; }
+.featured-item-category { font-size: 17px; color: #666; text-transform: uppercase; }
 .featured-item-category a { color: #999; }
 .featured-item-category a:hover { color: #fff; }
-.featured-item-excerpt { color: #999; font-size: 18px; line-height: 1.6em; margin-top: 30px; }
+.featured-item-excerpt { color: #999; font-size: 17px; line-height: 1.6em; margin-top: 30px; }
 .featured-item-bottom:before { content:""; position: absolute; right: -28px; bottom: 60px; z-index: 2; width: 0; height: 0; border-top: 30px solid transparent; border-bottom: 30px solid transparent; border-left: 30px solid #333; }
 
 .slick-posts-wrap-outer { display: none; /* before loading */ border-bottom: 1px solid #333; }
