--- a/style.css
+++ b/style.css
@@ -1195,14 +1195,14 @@ box-shadow: 0 0 2px rgba(255,255,255,0.4);
 /* ------------------------------------------------------------------------- *
  *  Widgets
 /* ------------------------------------------------------------------------- */
-.widget { color: #777; font-size: 14px; }
-.widget a { color: #777; font-weight: 400; }
-.widget a:hover { color: #333; }
-.widget > h3 { font-size: 16px; font-weight: 400; margin: 0 -50px 10px; padding: 0 50px; }
+.widget { color: rgba(255,255,255,0.6); font-size: 14px; }
+.widget a { color: rgba(255,255,255,0.8); font-weight: 400; }
+.widget a:hover { color: #fff; }
+.widget > h3 { color: #fff; font-size: 16px; font-weight: 400; margin: 0 -50px 10px; padding: 0 50px; }
 .widget > h3 a,
-.widget > h3 a:hover { color: #333; }
+.widget > h3 a:hover { color: #fff; }
 .widget > h3 a img { display: none; float: left; margin: 3px 7px 0 0; }
-.widget select { border: 1px solid #ddd; color: #777; font-size: 15px; padding: 7px; width: 100%; max-width: 100%; }
+.widget select { background: rgba(0,0,0,0.25); border: 1px solid rgba(255,255,255,0.1); color: rgba(255,255,255,0.8); font-size: 15px; padding: 7px; width: 100%; max-width: 100%; }
 .widget label.screen-reader-text { display: none; }
 
 .sidebar .widget { padding: 30px 40px; border-top: 1px solid #333; }
@@ -1212,8 +1212,8 @@ box-shadow: 0 0 2px rgba(255,255,255,0.4);
 .widget > ul li:before,
 .widget > ul li a:before,
 .widget > div > ul li a:before,
-.widget_calendar caption:before { font-family: "Font Awesome 5 Free"; font-weight: 900; font-size: 12px; margin-right: 6px; color: #ccc; display: inline-block!important; width: 1em; text-align: center; }
-.widget > ul li a:hover:before { color: #999; }
+.widget_calendar caption:before { font-family: "Font Awesome 5 Free"; font-weight: 900; font-size: 12px; margin-right: 6px; color: rgba(255,255,255,0.6); opacity: 0.5; display: inline-block!important; width: 1em; text-align: center; }
+.widget > ul li a:hover:before { color: #fff; }
 
 .widget_archive > ul > li a:before { content: "\f073"; } 
 .widget_categories > ul > li a:before { content: "\f07c"; }
@@ -1246,10 +1246,10 @@ box-shadow: 0 0 2px rgba(255,255,255,0.4);
 
 .widget_archive ul li,
 .widget_categories ul li,
-.widget_links ul li { color: #bbb; }
+.widget_links ul li { color: rgba(255,255,255,0.6); }
 
 .widget_recent_comments ul li,
-.widget_recent_entries ul li { color: #999; }
+.widget_recent_entries ul li { color: rgba(255,255,255,0.6); }
 .widget_recent_entries .post-date { display: block; }
 
 /*  widget : pages / custom menu
@@ -1273,13 +1273,14 @@ box-shadow: 0 0 2px rgba(255,255,255,0.4);
 
 /*  widget : rss
 /* ------------------------------------ */
-.widget_rss ul li a { color: #333; display: block; }
-.widget_rss ul li span.rss-date { color: #333; font-weight: 600; display: block; text-transform: uppercase; font-size: 12px; }
-.widget_rss ul li cite { color: #999; }
+.widget_rss ul li a { color: #fff; display: block; }
+.widget_rss ul li span.rss-date { color: rgba(255,255,255,0.8); font-weight: 600; display: block; text-transform: uppercase; font-size: 12px; }
+.widget_rss ul li cite { color: rgba(255,255,255,0.5); }
 
 /*  widget : search
 /* ------------------------------------ */
-.widget_search input.search { color: #999; padding-left: 26px; width: 100%; }
+.widget_search input.search { background: transparent!important; color: rgba(255,255,255,0.7); border: 1px solid rgba(255,255,255,0.1); padding-left: 26px; width: 100%; }
+.widget_search input.search:focus { color: rgba(255,255,255,0.9); border: 1px solid rgba(255,255,255,0.1); }
 .widget_search .screen-reader-text,
 .widget_search #searchsubmit { display: none; }
 
@@ -1289,37 +1290,37 @@ box-shadow: 0 0 2px rgba(255,255,255,0.4);
 
 /*  widget : calendar
 /* ------------------------------------ */
-.widget_calendar a { color: #333; font-weight: 600; }
-.widget_calendar a:hover { color: #333!important; }
+.widget_calendar a { color: #fff; font-weight: 600; }
+.widget_calendar a:hover { color: rgba(255,255,255,0.8)!important; }
 .widget_calendar #wp-calendar { width: 100%; }
-.widget_calendar caption { background: #333; color: #fff; padding: 5px 10px; }
+.widget_calendar caption { background: rgba(255,255,255,0.2); color: #fff; padding: 5px 10px; }
 .widget_calendar caption:before { color: #fff; color: rgba(255,255,255,0.7); font-size: 15px; }
-.widget_calendar thead { background: #e2e2e2; -webkit-box-shadow: 0 1px 0 #eee; box-shadow: inset 0 -1px 0 #eee; }
+.widget_calendar thead { background: rgba(0,0,0,0.1); color: #ccc; box-shadow: inset 0 -1px 0 rgba(0,0,0,0.1); }
 .widget_calendar th { font-weight: 600; }
 .widget_calendar th, 
-.widget_calendar td { padding: 3px 0; text-align: center; border: 1px solid #e2e2e2; }
+.widget_calendar td { padding: 3px 0; text-align: center; border: 1px solid rgba(255,255,255,0.1); }
 .widget_calendar .pad { padding: 0!important; }
 
 /*  custom widget : alxtabs / alxposts
 /* ------------------------------------ */
-.alx-tabs-nav { background: linear-gradient(0deg, #e5e5e5 0%, #f1f1f1 100%); position: relative; overflow: hidden; border-radius: 6px; margin: 0 0 24px; text-align: center; }
+.alx-tabs-nav { background: #333; position: relative; overflow: hidden; margin: 0 0 24px; text-align: center; }
 .alx-tabs-nav.tab-count-1 li { width: 100%; }
 .alx-tabs-nav.tab-count-2 li { width: 50%; }
 .alx-tabs-nav.tab-count-3 li { width: 33.333%; }
 .alx-tabs-nav.tab-count-4 li { width: 25%; }
 .alx-tabs-nav li { display: block; float: left; }
-.alx-tabs-nav li a { color: #333; font-size: 18px; display: block; padding: 14px 0; border-left: 1px solid #ddd; }
+.alx-tabs-nav li a { color: #999; font-size: 18px; display: block; padding: 14px 0; border-left: 1px solid #222; }
 .alx-tabs-nav li:first-child a { border-left: 0; }
-.alx-tabs-nav li a:hover { color: #555; }
-.alx-tabs-nav li.active a { background: linear-gradient(130deg, #bd1d9d 0%, #d64141 100%); color: #fff; }
+.alx-tabs-nav li a:hover { color: #fff; }
+.alx-tabs-nav li.active a { background: #444; color: #fff; }
 .alx-tabs-nav li a span { display: none; }
 
 .alx-tab li,
-.alx-posts li { font-weight: 300; line-height: 1.4em; }
+.alx-posts li { font-weight: 400; line-height: 1.4em; }
 .alx-tab a,
 .alx-posts a { -webkit-transition: all 0.2s ease; -moz-transition: all 0.2s ease; transition: all 0.2s ease; }
 .alx-tab img,
-.alx-posts img { display: block; width: 100%; height: auto; border-radius: 6px; }
+.alx-posts img { display: block; width: 100%; height: auto; }
 .alx-tab img {  }
 .alx-tab.thumbs-enabled li{ padding-left: 62px; }
 .alx-tab .tab-item-thumbnail { width: 48px; margin-left: -62px; float: left; }
@@ -1331,15 +1332,15 @@ box-shadow: 0 0 2px rgba(255,255,255,0.4);
 .alx-posts .post-item-category { color: #aaa; font-size: 14px; }
 .alx-tab .tab-item-title a,
 .alx-tab .tab-item-comment a,
-.alx-posts .post-item-title a { color: #333; }
+.alx-posts .post-item-title a { color: #fff; }
 .alx-tab .tab-item-category a:hover,
-.alx-posts .post-item-category a:hover { color: #333!important; }
+.alx-posts .post-item-category a:hover { color: #fff!important; }
 .alx-tab .tab-item-title,
 .alx-tab .tab-item-comment,
 .alx-posts .post-item-title { margin: 2px 0; -ms-word-wrap: break-word; word-wrap: break-word; }
 .alx-tab .tab-item-date,
 .alx-tab .tab-item-name,
-.alx-posts .post-item-date  { color: #bbb; font-size: 13px; }
+.alx-posts .post-item-date  { color: rgba(255,255,255,0.6); font-size: 13px; }
 .alx-tab li:hover .tab-item-thumbnail,
 .alx-tab li:hover .tab-item-avatar,
 .alx-posts li:hover .post-item-thumbnail { opacity: 0.75; }
@@ -1350,7 +1351,7 @@ box-shadow: 0 0 2px rgba(255,255,255,0.4);
 .alx-posts .post-item-category a,
 .alx-tab li:hover .tab-item-title a,
 .alx-tab li:hover .tab-item-comment a,
-.alx-posts li:hover .post-item-title a { color: #dc3262; }
+.alx-posts li:hover .post-item-title a { color: rgba(255,255,255,0.6); }
 
 .alx-posts .post-item-thumbnail { margin-bottom: 10px; }
 .alx-posts .post-item-title { font-size: 16px; line-height: 1.5em; }
@@ -1358,93 +1359,6 @@ box-shadow: 0 0 2px rgba(255,255,255,0.4);
 .s1 .alx-posts .post-item-title { font-size: 18px; line-height: 1.4em; font-weight: 300; }
 .s1 .alx-posts .post-item-category,
 .s1 .alx-posts .post-item-date { font-size: 13px; }
-
-/*  custom widget : alxvideo
-/* ------------------------------------ */
-.widget_folias_video h3 { margin-bottom: 14px; }
-
-
-/* ------------------------------------------------------------------------- *
- *  Dark Widgets
-/* ------------------------------------------------------------------------- */
-.dark .widget { color: rgba(255,255,255,0.6); }
-.dark .widget a { color: rgba(255,255,255,0.8); }
-.dark .widget a:hover { color: #fff; }
-.dark .widget > h3,
-.dark .widget > h3 a,
-.dark .widget > h3 a:hover { color: #fff; }
-.dark .widget select { background: rgba(0,0,0,0.25); border-color: rgba(255,255,255,0.1); color: rgba(255,255,255,0.8); }
-
-/*  widgets : icons
-/* ------------------------------------ */
-.dark .widget > ul li:before,
-.dark .widget > ul li a:before,
-.dark .widget > div > ul li a:before  { color: rgba(255,255,255,0.6); opacity: 0.5; }
-.dark .widget_calendar caption:before,
-.dark .widget > ul li a:hover:before { color: #fff; }
-
-/*  widgets : common
-/* ------------------------------------ */
-.dark .widget_archive ul li, 
-.dark .widget_categories ul li, 
-.dark .widget_links ul li, 
-.dark .widget_meta ul li, 
-.dark .widget_recent_comments ul li, 
-.dark .widget_recent_entries ul li,
-.dark .widget_rss ul li,
-.dark .widget_pages ul li a,
-.dark .widget_nav_menu ul li a,
-.dark .alx-tab li,
-.dark .alx-posts li,
-.dark .widget_calendar th, 
-.dark .widget_calendar td { border-color: #333; }
-
-.dark .widget_archive ul li,
-.dark .widget_categories ul li,
-.dark .widget_links ul li,
-.dark .widget_recent_comments ul li,
-.dark .widget_recent_entries ul li { color: rgba(255,255,255,0.6); }
-
-/*  widget : pages / custom menu
-/* ------------------------------------ */
-
-/*  widget : rss
-/* ------------------------------------ */
-.dark .widget_rss ul li a { color: #fff; }
-.dark .widget_rss ul li span.rss-date { color: rgba(255,255,255,0.8); }
-.dark .widget_rss ul li cite { color: rgba(255,255,255,0.5); }
-
-/*  widget : search
-/* ------------------------------------ */
-.dark .widget_search input.search { background: transparent; color: rgba(255,255,255,0.7); border: 1px solid rgba(255,255,255,0.1); }
-.dark .widget_search input.search:focus { color: rgba(255,255,255,0.9); }
-
-/*  widget : calendar
-/* ------------------------------------ */
-.dark .widget_calendar a:hover { color: rgba(255,255,255,0.8)!important; }
-.dark .widget_calendar a { color: #fff; }
-.dark .widget_calendar thead { background: rgba(0,0,0,0.1); color: #ccc; -webkit-box-shadow: 0 1px 0 rgba(0,0,0,0.1); box-shadow: inset 0 -1px 0 rgba(0,0,0,0.1); }
-.dark .widget_calendar caption { background: rgba(255,255,255,0.2); }
-.dark .widget_calendar th, 
-.dark .widget_calendar td { border-color: rgba(255,255,255,0.1);  }
-
-/*  custom widget : alxtabs / alxposts
-/* ------------------------------------ */
-.dark .alx-tabs-nav { background: linear-gradient(0deg, #111 0%, #222 100%); }
-.dark .alx-tabs-nav li a { border-color: rgba(0,0,0,0.5); }
-.dark .alx-tabs-nav li.active a { color: #fff; border-bottom-color: #fff; }
-
-.dark .alx-tab .tab-item-category a,
-.dark .alx-posts .post-item-category a,
-.dark .alx-tab li:hover .tab-item-title a,
-.dark .alx-tab li:hover .tab-item-comment a,
-.dark .alx-posts li:hover .post-item-title a { color: #dc3262; }
-.dark .alx-tab .tab-item-category a:hover,
-.dark .alx-posts .post-item-category a:hover { color: rgba(255,255,255,0.8)!important; }
-
-.dark .alx-tab .tab-item-date, 
-.dark .alx-tab .tab-item-name, 
-.dark .alx-posts .post-item-date { color: rgba(255,255,255,0.5); }
 
 
 /* ------------------------------------------------------------------------- *
