--- a/style.css
+++ b/style.css
@@ -1240,7 +1240,7 @@ box-shadow: 0 0 2px rgba(255,255,255,0.4);
 .widget_recent_entries ul li,
 .widget_rss ul li,
 .widget_pages ul li a,
-.widget_nav_menu ul li a,
+.widget_nav_menu ul li a { padding: 4px 0; }
 .alx-tab li,
 .alx-posts li { padding: 7px 0; }
 
