--- a/style.css
+++ b/style.css
@@ -202,16 +202,17 @@ input, textarea, button, select, label { font-family: inherit; }
 .themeform input[type="submit"],
 .themeform button[type="button"],
 .themeform button[type="reset"],
-.themeform button[type="submit"] { background: #333; color: #fff; padding: 8px 14px; font-weight: 600; display: inline-block; border: none; cursor: pointer; -webkit-border-radius: 3px; border-radius: 3px; }
+.themeform button[type="submit"] { background: #fff; color: #333; padding: 8px 14px; font-weight: 600; display: inline-block; border: none; cursor: pointer; -webkit-border-radius: 3px; border-radius: 3px; }
 .themeform input[type="button"]:hover,
 .themeform input[type="reset"]:hover,
 .themeform input[type="submit"]:hover,
 .themeform button[type="button"]:hover,
 .themeform button[type="reset"]:hover,
-.themeform button[type="submit"]:hover { background: #333; }
+.themeform button[type="submit"]:hover { background: #fff; }
 
 .themeform.searchform div { position: relative; }
 .themeform.searchform div input { background: #fff; padding-left: 26px; line-height: 20px; }
+.search-expand .themeform.searchform div input:focus { color: #333; }
 .themeform.searchform div:after { color: #ccc; line-height: 24px; font-size: 14px; content: "\f002"; position: absolute; left: 10px; top: 6px; font-family: "Font Awesome 5 Free"; font-weight: 900; }
 
 /*  base : entry
@@ -219,19 +220,19 @@ input, textarea, button, select, label { font-family: inherit; }
 .entry { font-size: 19px; line-height: 1.6em; }
 .entry a { color: #fff; }
 .entry a:hover { color: #999; }
-.entry hr { border: 0; background: #e5e5e5; height: 2px; width: 30%; margin: 40px auto; }
+.entry hr { border: 0; background: #444; height: 2px; width: 30%; margin: 40px auto; }
 .entry p,
 .entry dd { margin-bottom: 1em; }
 .entry dt { color: #333; }
 .entry dt { font-weight: 600;}
 .entry address { margin-bottom: 1em; }
-.entry blockquote { position: relative; color: #777; font-style: italic; margin: 0 0 20px 0; padding-left: 50px; }
+.entry blockquote { position: relative; color: #aaa; font-style: italic; margin: 0 0 20px 0; padding-left: 50px; }
 .entry blockquote p { font-weight: 400; color: #fff; margin-bottom: 0.75em; }
 .entry blockquote:before { content: "\f10d"; color: #ccc; font-size: 32px; font-style: normal; font-family: "Font Awesome 5 Free"; font-weight: 900; text-align: center; position: absolute; left: 0; top: 0; }
 .entry blockquote.twitter-tweet:before { content: "\f099"; }
 .entry code, .entry pre { font-family: Monaco, "Courier New", "DejaVu Sans Mono", "Bitstream Vera Sans Mono", monospace; font-size: 11px; }
 .entry pre { background: url(img/pre.png) repeat top; padding: 18px 20px; margin: 30px 0; border: 1px solid #444; line-height: 19px; white-space: pre-wrap; word-wrap: break-word; overflow-x: auto; overflow-y: hidden; }
-.entry code { background: #ddd; padding: 0 3px; }
+.entry code { background: #222; padding: 0 3px; }
 .entry ins { background: #fff486; }
 .entry sub,
 .entry sup { font-size: 62.5%; }
@@ -248,7 +249,7 @@ input, textarea, button, select, label { font-family: inherit; }
 .entry img.aligncenter { margin: 18px auto; clear: both; display: block; }
 .entry img .size-full { width: 100%!important; }
 .entry .gallery img, .entry img.wp-smiley { margin: 0; }
-.entry .wp-caption { background: #f1f1f1; max-width: 100%; margin-bottom: 14px; padding-top: 5px; text-align: center; }
+.entry .wp-caption { background: #222; max-width: 100%; margin-bottom: 14px; padding-top: 5px; text-align: center; }
 .entry .wp-caption-text { font-style: italic; }
 .entry .wp-caption a { border-bottom: none; }
 .entry .wp-caption img { margin: 0; max-width: 100%; height: auto; }
@@ -260,9 +261,9 @@ input, textarea, button, select, label { font-family: inherit; }
 
 /* table */
 .entry table { font-size: 14px; margin-bottom: 1.5em; width: 100%; text-align: center; }
-.entry table tr.alt { background: #eee; }
-.entry table td { border: 1px solid #ddd; text-align: center; padding: 5px; vertical-align: middle; }
-.entry table th { border: 1px solid #ddd; font-weight: 600; text-align: center; padding: 10px 5px; }
+.entry table tr.alt { background: #222; }
+.entry table td { border: 1px solid #222; text-align: center; padding: 5px; vertical-align: middle; }
+.entry table th { border: 1px solid #222; font-weight: 600; text-align: center; padding: 10px 5px; }
 
 /* default gallery */
 .entry .gallery,
@@ -632,7 +633,7 @@ box-shadow: inset 0 1px 1px rgba(0,0,0,0.4), 0 1px 0 rgba(255,255,255,0.03); }
 .pagination ul li a:before { font-family: "Font Awesome 5 Free"; font-weight: 900; font-size: 52px; line-height: 100px; display: block; }
 .pagination ul li.next a:before { content: "\f105"; }
 .pagination ul li.prev a:before { content: "\f104"; }
-.pagination ul li a { display: inline-block; font-size: 0; margin: 10px; width: 100px; height: 100px; border-radius: 10px; background: #fff; border: 1px solid #eee; border-bottom-color: #ddd; }
+.pagination ul li a { display: inline-block; font-size: 0; margin: 10px; width: 100px; height: 100px; border-radius: 3px; background: #333; }
 
 /*  common : thumb icon
 /* ------------------------------------ */
