--- a/responsive.css
+++ b/responsive.css
@@ -110,6 +110,7 @@
 	/* blog home */
 	.content-inner { padding: 20px; }
 	.content-inner.magic-wrap { padding-left: 20px; padding-right: 20px; }
+	.front-widgets { margin: 0 0 20px; padding: 10px 30px;  }
 	.type-portfolio { width: 100%; }
 	
 	.slick-posts-wrap { padding: 20px 20px 10px; }
