--- a/style.css
+++ b/style.css
@@ -298,7 +298,7 @@ transition: all .2s ease;
 .heading,
 #reply-title { font-weight: normal; font-size: 18px; font-weight: 400; margin-bottom: 1em; }
 .heading i { font-size: 22px; margin-right: 6px; }
-.single h4.heading { padding-bottom: 30px; margin-bottom: 40px; border-bottom: 1px solid #333; }
+.single h4.heading { padding-bottom: 30px; margin: 40px 0; border-bottom: 1px solid #333; }
 
 
 /* ------------------------------------------------------------------------- *
