--- a/style.css
+++ b/style.css
@@ -678,7 +678,7 @@ box-shadow: 0 0 2px rgba(255,255,255,0.4);
 .s2 .social-links .social-tooltip:hover:after { background: #fff; color: #333; padding: 7px 10px; top: 14px; left: 50px; right: auto; }
 .s2 .social-links .social-tooltip:hover:before { top: 24px; left: 45px; right: auto; border-color: transparent #fff; border-width: 5px 5px 5px 0; }
 
-.site-title { text-align: center; font-size: 36px; font-weight: 600; letter-spacing: -0.5px; line-height: 50px; padding: 17px 40px; position: relative; z-index: 2; }
+.site-title { text-align: center; font-size: 36px; font-weight: 300; letter-spacing: -0.5px; line-height: 50px; padding: 17px 40px; position: relative; z-index: 2; }
 .site-title a { display: block; color: #fff; max-width: 100%; }
 .site-title a img { display: block; margin: 0 auto; max-width: 100%; max-height: 50px; height: auto; padding: 0; -webkit-border-radius: 0; border-radius: 0; }
 .site-description { text-align: center; padding: 0 40px 30px; font-size: 16px; line-height: 1.6em; font-weight: 300; color: rgba(255,255,255,0.6); position: relative; z-index: 2; }
@@ -719,10 +719,10 @@ box-shadow: 0 0 2px rgba(255,255,255,0.4);
 .type-portfolio-content {  }
 .type-portfolio-title { padding: 10px 20px; font-weight: 400; font-size: 17px; line-height: 1.5em; }
 .type-portfolio-title a { color: #fff; }
-.type-portfolio-category { font-size: 13px; color: #777; text-transform: uppercase; padding: 10px 20px; border-top: 1px solid #444; }
-.type-portfolio-category a { color: #999; }
+.type-portfolio-category { font-size: 13px; color: rgba(255,255,255,0.3); text-transform: uppercase; padding: 10px 20px; border-top: 1px solid rgba(255,255,255,0.08); }
+.type-portfolio-category a { color: rgba(255,255,255,0.5); }
 .type-portfolio-category a:hover { color: #fff; }
-.type-portfolio-excerpt { font-size: 13px; padding: 0 20px 15px; margin-top: -5px; }
+.type-portfolio-excerpt { color: rgba(255,255,255,0.5); font-size: 13px; padding: 0 20px 15px; margin-top: -5px; }
 
 /*  header : search
 /* ------------------------------------ */
@@ -921,16 +921,16 @@ box-shadow: 0 0 2px rgba(255,255,255,0.4);
 .featured-item-right:hover:before { opacity: 0.5; }
 .featured-item-right .featured-item-link { position: absolute; left: 0; right: 0; top: 0; bottom: 0; }
 
-.featured-item-bottom { border-top: 1px solid #444; position: absolute; bottom: 0; left: 0; right: 0; padding: 50px 60px; }
+.featured-item-bottom { border-top: 1px solid rgba(255,255,255,0.08); position: absolute; bottom: 0; left: 0; right: 0; padding: 50px 60px; }
 .featured-item-bottom:after { content:""; background: linear-gradient(180deg, rgba(0,0,0,0) 0%, rgba(51,51,51,1) 100%); height: 50px; position: absolute; left: 0; right: 0; bottom: 0; }
-.featured-item-avatar { background: #333; width: 70px; height: auto; padding: 6px; border: 1px solid #444; border-radius: 100%; position: absolute; top: -44px; left: 60px; }
+.featured-item-avatar { background: #333; width: 70px; height: auto; padding: 6px; border: 1px solid rgba(255,255,255,0.08); border-radius: 100%; position: absolute; top: -44px; left: 60px; }
 .featured-item-avatar img { border-radius: 100%; } 
 .featured-item-title { font-size: 52px; letter-spacing: -1px; font-weight: 300; line-height: 1.2em; margin-bottom: 20px; }
 .featured-item-title a { color: #fff; }
-.featured-item-category { font-size: 17px; color: #666; text-transform: uppercase; }
-.featured-item-category a { color: #999; }
+.featured-item-category { font-size: 17px; color: rgba(255,255,255,0.3); text-transform: uppercase; }
+.featured-item-category a { color: rgba(255,255,255,0.5); }
 .featured-item-category a:hover { color: #fff; }
-.featured-item-excerpt { color: #999; font-size: 17px; line-height: 1.6em; margin-top: 30px; }
+.featured-item-excerpt { color: rgba(255,255,255,0.5); font-size: 17px; line-height: 1.6em; margin-top: 30px; }
 .featured-item-bottom:before { content:""; position: absolute; right: -28px; bottom: 60px; z-index: 2; width: 0; height: 0; border-top: 30px solid transparent; border-bottom: 30px solid transparent; border-left: 30px solid #333; }
 
 .slick-posts-wrap-outer { display: none; /* before loading */ border-bottom: 1px solid #333; }
