--- a/style.css
+++ b/style.css
@@ -984,7 +984,7 @@ box-shadow: 0 0 2px rgba(255,255,255,0.4);
 #footer { color: #777; border-top: 1px solid #333; position: relative; padding-bottom: 30px; }
 #footer .pad { padding-bottom: 20px; }
 
-#footer-ads { background: #fff; text-align: center; padding: 10px 0; border-bottom: 1px solid #333; }
+#footer-ads { text-align: center; padding: 10px 0; border-bottom: 1px solid #333; }
 #footer-ads .widget { padding-bottom: 0; font-size: 0; line-height: 0; }
 #footer-ads h3 { display: none; }
 
